# Traider

./: .gitignore  IBIO_press_release_full.txt  NVDA_press_release.html  README.md  SMTC_press_release.html  SSL_press_release.html  main.py  pitch.md  pyproject.toml  pyrightconfig.json  pytest.ini  seed_database.py  trading_platform.db
src/: pub-sub_example.py  simple_IB_demo.py  simple_demo.py  traider_earnings.py  yahoo_earnings_watcher.py  yf_earnings_and_press_release_monitoring.py
src/modules/: __init__.py
src/modules/earnings/: crawlee.py  earnings.py  helpers.py  main.py
src/tests/unit/cache/: test_disk_cache_backend.py
src/trader/: main.py  models.py  simple_demo.py
src/trader/interfaces/: __init__.py  market_data.py  trading_platform.py
src/traider/: models.py  simple_demo.py
src/traider/crawlee_server/: __init__.py  crawler.py  server.py
src/traider/db/: __init__.py  crud.py  data_manager.py  database.py  schema.sql
src/traider/interfaces/: __init__.py  cache.py  market_data.py  queue_sink.py  trading_platform.py
src/traider/llm/: press_release_urls.py
src/traider/messagebus/: __init__.py  channels.py  protocol.py  router.py
src/traider/messagebus/brokers/: memory.py
src/traider/modules/: __init__.py
src/traider/pollers/: __init__.py  access_newswire_poller.py  business_newswire_poller.py  globe_newswire_poller.py  newsroom_poller.py  pr_newswire_poller.py  sec_poller.py  yahoo_earnings_poller.py  yahoo_press_release_poller.py
src/traider/scripts/: Yahoo Earnings Calendar.md  collect_earnings_company_urls.py  collect_yahoo_earnings.py  discover_pr_urls.py  seed_database.py  test_press_releases.py  yahoo_earnings_calendar.py  yahoo_earnings_watcher.py  yahoo_press_release_watcher.py  yahoo_profile.py  yf_earnings_calendar.py  yf_press_releases.py
src/traider/tests/: conftest.py  test_yfinance_db.py
src/traider/yfinance/: OLD_yahoo_finance.py  __init__.py  _api.py  _constants.py  _helpers.py  _models.py
twsapi/: essentials.py
(+125 files in other folders)
