[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traider"
version = "0.1.0"
description = "AI pilled automated trading system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.42.0",
    "bs4>=0.0.2",
    "cloudscraper>=1.2.71",
    "dspy>=2.6.27",
    "ibapi @ file:///${PROJECT_ROOT}/twsapi/IBJts/source/pythonclient",
    "lxml>=6.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "urllib3>=2,<3",
    "diskcache>=5.6.3",
    "crawlee[curl-impersonate,playwright]>=0.6.12",
    "playwright>=1.54.0",
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=1.0.1",
    "pandas>=2.2.2",
    "tldextract>=5.3.0",
    "camoufox>=0.4.11",
    "aiofiles>=24.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
